--- a/client/zanata-cli/pom.xml
+++ b/client/zanata-cli/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.zanata</groupId>
     <artifactId>client</artifactId>
-    <version>4.6.3-SNAPSHOT</version>
+    <version>4.6.2</version>
   </parent>
   <artifactId>zanata-cli</artifactId>
   <name>Zanata command-line client</name>
@@ -14,7 +14,7 @@
   <scm>
     <connection>scm:git:https://github.com/zanata/zanata-platform.git</connection>
     <developerConnection>scm:git:git@github.com:zanata/zanata-platform.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>platform-4.6.2</tag>
   </scm>
 
   <build>
@@ -56,34 +56,6 @@
   </build>
 
   <dependencies>
-    <!-- Java 8 comes with JAXB Version 2.2.8.
-    To work with Java 8,9,11+ we include JAXB ourselves.
-    See https://stackoverflow.com/a/43574427/14379 -->
-    <dependency>
-      <groupId>javax.xml.bind</groupId>
-      <artifactId>jaxb-api</artifactId>
-    </dependency>
-
-    <dependency>
-    <groupId>org.glassfish.jaxb</groupId>
-    <artifactId>jaxb-runtime</artifactId>
-    <version>2.2.11</version>
-    </dependency>
-
-    <!-- Replace the above JAXB dependencies when 2.4.0 is released: -->
-
-    <!-- https://stackoverflow.com/a/50251510/14379 -->
-    <!--<dependency>-->
-      <!--<groupId>javax.xml.bind</groupId>-->
-      <!--<artifactId>jaxb-api</artifactId>-->
-      <!--<version>2.4.0</version>-->
-    <!--</dependency>-->
-    <!--<dependency>-->
-      <!--<groupId>org.glassfish.jaxb</groupId>-->
-      <!--<artifactId>jaxb-runtime</artifactId>-->
-      <!--<version>2.4.0</version>-->
-    <!--</dependency>-->
-
     <dependency>
       <groupId>args4j</groupId>
       <artifactId>args4j</artifactId>
@@ -194,8 +166,6 @@
             </executions>
             <configuration>
               <licenseHeaderFile>${basedir}/COPYING-header.txt</licenseHeaderFile>
-              <!-- Remove this when jaxb 2.4.0 is out. See https://stackoverflow.com/a/50251510/14379 -->
-              <extraJvmArguments>-Dcom.sun.xml.bind.v2.bytecode.ClassTailor.noOptimize</extraJvmArguments>
               <programs>
                 <program>
                   <mainClass>org.zanata.client.ZanataClient</mainClass>
