--- a/client/zanata-client-commands/pom.xml
+++ b/client/zanata-client-commands/pom.xml
@@ -4,9 +4,10 @@
   <parent>
     <groupId>org.zanata</groupId>
     <artifactId>client</artifactId>
-    <version>4.6.3-SNAPSHOT</version>
+    <version>4.6.2</version>
   </parent>
   <artifactId>zanata-client-commands</artifactId>
+  <version>4.6.2-ilogs</version>
   <name>Zanata client commands</name>
   <packaging>jar</packaging>
 
@@ -14,7 +15,7 @@
   <scm>
     <connection>scm:git:https://github.com/zanata/zanata-platform.git</connection>
     <developerConnection>scm:git:git@github.com:zanata/zanata-platform.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>platform-4.6.2</tag>
   </scm>
 
   <dependencies>
@@ -164,7 +165,7 @@
     <dependency>
       <groupId>org.fusesource.jansi</groupId>
       <artifactId>jansi</artifactId>
-      <version>1.11</version>
+      <version>2.4.0</version>
     </dependency>
 
   </dependencies>
