--- a/client/zanata-maven-plugin/pom.xml
+++ b/client/zanata-maven-plugin/pom.xml
@@ -4,10 +4,10 @@
   <parent>
     <groupId>org.zanata</groupId>
     <artifactId>client</artifactId>
-    <version>4.6.3-SNAPSHOT</version>
+    <version>4.6.2</version>
   </parent>
   <artifactId>zanata-maven-plugin</artifactId>
-
+  <version>4.6.2-ilogs</version>
   <packaging>maven-plugin</packaging>
 
   <name>Zanata Maven Plugin</name>
@@ -26,13 +26,13 @@
   <scm>
     <connection>scm:git:https://github.com/zanata/zanata-platform.git</connection>
     <developerConnection>scm:git:git@github.com:zanata/zanata-platform.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>platform-4.6.2</tag>
   </scm>
 
   <properties>
     <!-- Fedora 23 has 3.3.3 -->
     <maven.version>2.0.11</maven.version>
-    <maven.plugin.version>3.5</maven.plugin.version>
+    <maven.plugin.version>3.6.4</maven.plugin.version>
   </properties>
 
   <prerequisites>
@@ -58,6 +58,7 @@
     <dependency>
       <groupId>org.zanata</groupId>
       <artifactId>zanata-client-commands</artifactId>
+      <version>4.6.2-ilogs</version>
       <!-- Ensure we never pick up logback-classic -->
       <exclusions>
         <exclusion>
@@ -76,13 +77,22 @@
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-plugin-api</artifactId>
       <version>${maven.version}</version>
+      <scope>provided</scope>
     </dependency>
 
     <dependency>
       <groupId>org.apache.maven</groupId>
       <artifactId>maven-project</artifactId>
       <version>2.0</version>
+      <scope>provided</scope>
     </dependency>
+
+    <dependency>
+      <groupId>org.apache.maven</groupId>
+      <artifactId>maven-artifact</artifactId>
+      <scope>provided</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.easymock</groupId>
       <artifactId>easymock</artifactId>
@@ -153,12 +163,15 @@
         <executions>
           <!-- Tell maven-plugin-plugin to generate the 'help' goal -->
           <execution>
-            <id>help-goal</id>
+            <id>generated-helpmojo</id>
             <goals>
               <goal>helpmojo</goal>
             </goals>
           </execution>
         </executions>
+        <configuration>
+        <helpPackageName>org.zanata.maven</helpPackageName>
+        </configuration>
       </plugin>
 
       <plugin>
