--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>org.zanata</groupId>
     <artifactId>parent</artifactId>
-    <version>4.6.3-SNAPSHOT</version>
+    <version>4.6.2</version>
     <relativePath>parent</relativePath>
   </parent>
 
@@ -17,7 +17,7 @@
   <scm>
     <connection>scm:git:https://github.com/zanata/zanata-platform.git</connection>
     <developerConnection>scm:git:git@github.com:zanata/zanata-platform.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>platform-4.6.2</tag>
   </scm>
 
   <build>
@@ -56,7 +56,6 @@
     <module>parent</module>
     <module>api</module>
     <module>common</module>
-    <module>client</module>
-    <module>server</module>
+    <module>client</module>    
   </modules>
 </project>
