--- a/server/pom.xml
+++ b/server/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.zanata</groupId>
     <artifactId>parent</artifactId>
-    <version>4.6.3-SNAPSHOT</version>
+    <version>4.6.2</version>
     <relativePath>../parent</relativePath>
   </parent>
 
@@ -15,7 +15,7 @@
   <scm>
     <connection>scm:git:https://github.com/zanata/zanata-platform.git</connection>
     <developerConnection>scm:git:git@github.com:zanata/zanata-platform.git</developerConnection>
-    <tag>HEAD</tag>
+    <tag>platform-4.6.2</tag>
   </scm>
 
   <properties>
@@ -58,7 +58,7 @@
     <seam.version>2.3.1.Final</seam.version>
     <slf4j.version>1.7.25</slf4j.version>
     <gwteventservice.version>1.2.1</gwteventservice.version>
-    <okapi.version>0.29</okapi.version>
+    <okapi.version>0.35</okapi.version>
 
     <zanata.assets.version>10.4</zanata.assets.version>
     <zanata.client.version>${project.version}</zanata.client.version>
@@ -382,21 +382,21 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>2.19.0</version>
+        <version>2.8.9</version>
         <scope>test</scope>
       </dependency>
 
       <dependency>
-        <groupId>com.nhaarman.mockitokotlin2</groupId>
-        <artifactId>mockito-kotlin</artifactId>
-        <version>2.0.0-RC1</version>
+        <groupId>com.nhaarman</groupId>
+        <artifactId>mockito-kotlin-kt1.1</artifactId>
+        <version>1.5.0</version>
         <scope>test</scope>
       </dependency>
 
       <dependency>
         <groupId>org.objenesis</groupId>
         <artifactId>objenesis</artifactId>
-        <version>2.6</version>
+        <version>2.5</version>
       </dependency>
 
       <dependency>
@@ -2141,12 +2141,12 @@
           <dependency>
             <groupId>io.gitlab.arturbosch.detekt</groupId>
             <artifactId>detekt-cli</artifactId>
-            <version>1.0.0.RC7</version>
+            <version>1.0.0.RC7-3</version>
           </dependency>
           <dependency>
             <groupId>io.gitlab.arturbosch.detekt</groupId>
             <artifactId>detekt-formatting</artifactId>
-            <version>1.0.0.RC7</version>
+            <version>1.0.0.RC7-3</version>
           </dependency>
         </dependencies>
       </plugin>
