--- a/server/services/pom.xml
+++ b/server/services/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <artifactId>server</artifactId>
     <groupId>org.zanata</groupId>
-    <version>4.6.3-SNAPSHOT</version>
+    <version>4.6.2</version>
   </parent>
   <artifactId>services</artifactId>
   <packaging>jar</packaging>
@@ -18,7 +18,7 @@
     <connection>scm:git:git://github.com/zanata/zanata.git</connection>
     <developerConnection>scm:git:git@github.com:zanata/zanata.git</developerConnection>
     <url>https://github.com/zanata/zanata</url>
-    <tag>HEAD</tag>
+    <tag>platform-4.6.2</tag>
   </scm>
 
   <properties>
@@ -1222,8 +1222,8 @@
     </dependency>
 
     <dependency>
-      <groupId>com.nhaarman.mockitokotlin2</groupId>
-      <artifactId>mockito-kotlin</artifactId>
+      <groupId>com.nhaarman</groupId>
+      <artifactId>mockito-kotlin-kt1.1</artifactId>
     </dependency>
 
     <dependency>
