--- a/server/zanata-war/pom.xml
+++ b/server/zanata-war/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.zanata</groupId>
     <artifactId>server</artifactId>
-    <version>4.6.3-SNAPSHOT</version>
+    <version>4.6.2</version>
   </parent>
   <artifactId>zanata-war</artifactId>
   <packaging>war</packaging>
@@ -16,7 +16,7 @@
     <connection>scm:git:git://github.com/zanata/zanata.git</connection>
     <developerConnection>scm:git:git@github.com:zanata/zanata.git</developerConnection>
     <url>https://github.com/zanata/zanata</url>
-    <tag>HEAD</tag>
+    <tag>platform-4.6.2</tag>
   </scm>
 
   <properties>
@@ -1534,8 +1534,8 @@
     </dependency>
 
     <dependency>
-      <groupId>com.nhaarman.mockitokotlin2</groupId>
-      <artifactId>mockito-kotlin</artifactId>
+      <groupId>com.nhaarman</groupId>
+      <artifactId>mockito-kotlin-kt1.1</artifactId>
     </dependency>
 
     <dependency>
